--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "axios": "^0.18.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-redux": "^7.1.0",
+    "react-scripts": "2.1.8",
+    "redux": "^4.0.4",
+    "redux-saga": "^1.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
